package ejercicio3.codigo;

import java.util.ArrayList;

//Interfaz para encontrar el mayor valor en una tabla
public interface FinderMayor {
    int encontrarMayor(ArrayList<Integer> tabla);
}
